# doom-fire-rust

./: Cargo.toml
src/: main.rs
src/doom_fire/: console_fire_renderer.rs  fire_engine.rs  fire_palette.rs  mod.rs  sdl_fire_renderer.rs
