[package]
name = "doom-fire"
version = "0.1.0"
authors = ["Chris <chris.ellis.git.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
crossterm = "0.13"
device_query = "0.1.3"
sdl2 = "0.32"
